# webprobe

./: .gitignore  README.md  component_map.yaml  constraints.yaml  prompt.md  pyproject.toml  schema_hints.yaml  sops.md  task.md  trust_policy.yaml  webprobe-mask.yaml.example  webprobe.kin  webprobe.yaml.example
.kin/: code-map.json  config  index.json
.pact/: audit.jsonl  state.json
.pact/test-gen/: analysis.json  security_audit.md
contracts/src_webprobe_analyzer/: interface.json  interface.py
contracts/src_webprobe_auth/: interface.py
contracts/src_webprobe_browser/: interface.py
contracts/src_webprobe_capturer/: interface.py
contracts/src_webprobe_cli/: interface.py
contracts/src_webprobe_config/: interface.json  interface.py
contracts/src_webprobe_differ/: interface.py
contracts/src_webprobe_explorer/: interface.py
contracts/src_webprobe_frameworks/: interface.json  interface.py
contracts/src_webprobe_llm_provider/: interface.json  interface.py
contracts/src_webprobe_mapper/: interface.py
contracts/src_webprobe_mask/: interface.json  interface.py
contracts/src_webprobe_models/: interface.json  interface.py
contracts/src_webprobe_reporter/: interface.py
contracts/src_webprobe_security/: interface.py
decomposition/: interview.json  tree.json
docs/: AUDIT_DIMENSIONS.md  index.html
docs/audit-prime/: 01-context.md  02-shopify-product-scan.md  03-cloudflare-agentready-scan.md  04-stripe-api-review.md  05-taxonomy-draft.md
src/webprobe/: __init__.py  advocate.py  analyzer.py  artifact_collector.py  artifact_store.py  auth.py  browser.py  capturer.py  cli.py  compliance.py  compliance_standards.yaml  config.py  differ.py  explorer.py  frameworks.py  llm_provider.py  mapper.py  mask.py  models.py  prober.py  reporter.py  scheduler.py  scorecard.py  security.py  visual.py
tests/smoke/: test_webprobe_analyzer.py  test_webprobe_auth.py  test_webprobe_browser.py  (+13 more)
(+81 files in other folders)
